fixed some spacing
added some space below the card component

fixed max-height of hero component image

--- a/03-airbnb_clone/src/App.css
+++ b/03-airbnb_clone/src/App.css
@@ -30,6 +30,7 @@ section {
 .hero-container > img {
   max-width: 50%;
   min-width: 350px;
+  max-height: 350px;
   align-self: center;
 }
 
@@ -124,4 +125,9 @@ section {
 
 .card--details {
   font-size: 10pt;
+}
+
+/* extra space div */
+.extraspace{
+  margin-top: 30px;
 }
